--- a/public/views/home.html
+++ b/public/views/home.html
@@ -28,7 +28,7 @@
 			<h1>BAD</h1>
 			<h1>CITY</h1>
 		
-			<h4>World's Worst Travel Guide</h4>
+			<h4>World's Worst City Guide</h4>
 			<h5 id="cityName">New Orleans</h5>
 		</div>	
 <!-- 	<div class="gif-container col-xs-12 col-sm-4">
