--- a/public/css/style.css
+++ b/public/css/style.css
@@ -331,6 +331,7 @@ body {
 	width: 60%;
 	margin: auto;
 	margin-bottom: 100px;
+	text-align: center;
 }
 @media all and (min-width: 900px) {
 .arrow-hover:hover .primary{
