--- a/public/views/home.html
+++ b/public/views/home.html
@@ -104,7 +104,7 @@
 			<img src="../assets/exit-icon.png"/>
 		</a>
 	</div>
-	<img src="http://www.reactiongifs.com/r/2013/06/I-dont-believe-you.gif"/>
+	<img src="https://www.reactiongifs.com/r/2013/06/I-dont-believe-you.gif"/>
 	<h5>This lightning bolt will fill out yellow when we've confirmed that you've done this.</h5>
 	<!-- <h5> {{popupChallenge}}</h5> 
  -->	<h5>To prove it send me a photo: blakebutterworth@gmail.com, or instagram: @butterpunk</h5>
