--- a/public/css/style.css
+++ b/public/css/style.css
@@ -346,7 +346,7 @@ body {
 		width: 100%;
 	}
 	.purple-container{
-	background:url('../assets/tumblr_o2egblCSHJ1v501yio1_1280.jpg')no-repeat center center;	
+	background:url('../assets/gray.png')no-repeat center center;	
 	}
 	.popup{
 		top: 100px;
