up to date with master

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -126,11 +126,8 @@
 		    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
 		  </div>
 		  <h6 id="errorText" class="text-muted">{{errormessage}}</h6>
-<<<<<<< HEAD
-	  <a ng-click="user('signup');" analytics-on="click" analytics-event="Singup" analytics-category="Content Actions"><button class="btn-primary">Sign Up</button></a><a ng-click="user('login');" analytics-on="click" analytics-event="PassportLogin" analytics-category="Content Actions"><button class="btn-primary">Login</button></a>
-=======
-	  <a  ng-click="user('signup');"><h6 class="logbutton" id="signupbutton">JOIN</h6></a><a ng-click="user('login');"><h6  class="logbutton"  id="signupbutton">LOGIN</h6></a>
->>>>>>> master
+
+	  <a  ng-click="user('signup');" analytics-on="click" analytics-event="Singup" analytics-category="Content Actions"><h6 class="logbutton" id="signupbutton">JOIN</h6></a><a ng-click="user('login');" analytics-on="click" analytics-event="PassportLogin" analytics-category="Content Actions"><h6  class="logbutton"  id="signupbutton">LOGIN</h6></a>
 
 </div>
 <div class="logoutpopup hide">
