added facebook descriptions

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -68,10 +68,10 @@
 					<h6><span class="underLine">Location:</span> {{dare.place}}</h6>
 					<h6><span class="underLine">Challenge:</span> {{dare.description}}</h6>
 					<h6><span class="underLine">Points:</span> {{dare.points}}</h6>	
-					<h6>{{userChallenges}}</h6>
+<!-- 					<h6>{{userChallenges}}</h6>
 				<div class="ifer" ng-if=" '{{userChallenges}}' | contains:'{{dare._id}}'">
 					<h6>{{dare._id}}</h6>				
-				</div>
+				</div> -->
 			</div>
 				<div class="row button-dare">
 					<div class="arrow-container">
